# iced-sctk

./: Cargo.toml
src/: application.rs  conversion.rs  egl.rs  error.rs  lib.rs  sctk_event.rs  settings.rs  util.rs  window.rs
src/commands/: layer_surface.rs  popup.rs  window.rs
src/event_loop/: mod.rs  proxy.rs  state.rs
src/handlers/: compositor.rs  mod.rs  output.rs
src/handlers/seat/: keyboard.rs  pointer.rs  seat.rs
src/handlers/shell/: layer.rs  mod.rs  xdg_popup.rs  xdg_window.rs
